# triode

./: CMakeLists.txt
src/: Table.h  main.cpp  node.cpp  node.h  parser.y  token.l
src/ir/: generator.cpp  generator.h
test/: genir.sh  out.ll  simple.tri  test.bc  test.cpp  test.ll
